bugfix(event card spacing) removed scrollbars. fixed column division.
AB#112

--- a/Singer.API/ClientApp/src/app/modules/dashboard/components/event-card/event-card.component.css
+++ b/Singer.API/ClientApp/src/app/modules/dashboard/components/event-card/event-card.component.css
@@ -1,8 +1,7 @@
-mat-card-content p {
-   max-height: 50px;
-   text-overflow: ellipsis;
-   overflow: auto;
+.card {
+   max-width: 400px;
 }
+
 .event-subtitle {
    display: flex;
    justify-content: space-between;
@@ -10,13 +9,10 @@ mat-card-content p {
 .date-indicator {
    display: flex;
    align-items: center;
-   font-size: 12px;
-   min-width: 100px;
+   font-size: 0.9em;
+   min-width: 7em;
 }
 
 .agegroup-chips {
-   max-height: 50px;
-   overflow-y: auto;
-   overflow-x: hidden;
    min-height: 40px;
 }
